--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "puppeteer": "^22.10.0"
+    "@sequelize/sqlite3": "^7.0.0-alpha.46",
+    "better-sqlite3": "^11.9.1",
+    "puppeteer": "^22.10.0",
+    "sequelize": "^6.37.7"
   }
 }
